k8s/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sporteventbook
  labels:
    name: sporteventbook
    environment: production
